data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2394.wast
;; 4. **Test 4: Indirect Function Call Within a Loop**    - Description: Use `call_indirect` within a loop structure that uses `br_table` for branching. Validate the correct function and proper stack handling.    - Constraint Checked: Correct indirect function calls and stack handling within a loop using `br_table`.    - Improper Function Call or Return Handling: Verifying correct function lookup and execution in `call_indirect` within looping branches.

(assert_invalid
  (module
    (type $t (func))
    (table anyfunc (elem)))
  "type mismatch at br_table or call_indirect"
)